--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "mysql2": "^2.1.0",
     "pug": "^3.0.0",
     "ramda": "^0.27.0",
     "uuid": "^8.2.0"
